	* Added support for Qt5.
	* Improved support for 64-bit Windows.
	* Improved support for Cygwin, enabled native Windows MIDI and wave audio API.
	* Improved LCD emulation: when setting standard patches, proper sound group name is shown.
	* Introduced pause function in MIDI player for convenience.
	* About window now shows target arch and used version of Qt library.

2014-12-21:

	1.3.0 released.

	* Fixed incorrect handling of some rarely used control messages in ALSA MIDI driver.
	* Added support for using different sample rates in audio drivers using sample rate conversion.
	  It is still preferable to use default sample rate of MT-32 emulation engine and sample rate conversion
	  should only be used if a different sample rate is necessary (e.g. audio system doesn't support 32000 Hz) or deliberate.
	  For best performance, libsoxr is supported. Libsamplerate is also supported as it is widely available.
	  As a worst case, the integrated linear interpolator can be used (it's fast but the quality...).
	* Added a new combo box into the Synth Properties dialog that allows to choose analogue circuits emulation method.
	* Added CoreAudio driver for OS X. Portaudio is no longer required for OS X builds.
	* AlsaAudioDriver made more resistant to possible errors and trying to recover before giving up.
	* Incorporated MidiStreamParser class from libmt32emu. This fixes long standing issue with Windows MIDI driver
	  and MIDI-in port handler that prevented receiving SysEx fragments or multi-SysEx packets sent in a single buffer.
	  Windows MIDI driver also supports running status for short messages now. OSS MIDI and CoreMIDI drivers also improved by this.
	* AudioFileWriter now always produces .WAV files in little endian and .RAW files in big endian which corresponds to smf2wav behaviour.
	* Audio drivers for CoreAudio, ALSA and PulseAudio made compatible with big endian systems.