@@ -101,25 +101,33 @@ void SynthWidget::handleSynthRouteState(SynthRouteState SynthRouteState) {
 	case SynthRouteState_OPEN:
 		ui->startButton->setEnabled(false);
 		ui->stopButton->setEnabled(true);
-		ui->audioOutputGroupBox->setEnabled(false);
+		ui->audioDeviceComboBox->setEnabled(false);
+		ui->refreshButton->setEnabled(false);
+		ui->audioPropertiesButton->setEnabled(false);
 		ui->statusLabel->setText("Open");
 		break;
 	case SynthRouteState_OPENING:
 		ui->startButton->setEnabled(false);
 		ui->stopButton->setEnabled(false);
-		ui->audioOutputGroupBox->setEnabled(false);
+		ui->audioDeviceComboBox->setEnabled(false);
+		ui->refreshButton->setEnabled(false);
+		ui->audioPropertiesButton->setEnabled(false);
 		ui->statusLabel->setText("Opening");
 		break;
 	case SynthRouteState_CLOSING:
 		ui->startButton->setEnabled(false);
 		ui->stopButton->setEnabled(false);
-		ui->audioOutputGroupBox->setEnabled(false);
+		ui->audioDeviceComboBox->setEnabled(false);
+		ui->refreshButton->setEnabled(false);
+		ui->audioPropertiesButton->setEnabled(false);
 		ui->statusLabel->setText("Closing");
 		break;
 	case SynthRouteState_CLOSED:
 		ui->startButton->setEnabled(true);
 		ui->stopButton->setEnabled(false);
-		ui->audioOutputGroupBox->setEnabled(true);
+		ui->audioDeviceComboBox->setEnabled(true);
+		ui->refreshButton->setEnabled(true);
+		ui->audioPropertiesButton->setEnabled(true);
 		ui->statusLabel->setText("Closed");
 		break;
 	}
@@ -234,6 +242,21 @@ void SynthWidget::on_midiRecord_clicked() {
 	} else {
 		ui->midiRecord->setText("Stop");
 		recorder.startRecording();
+	}
+}
+
+void SynthWidget::on_audioRecord_clicked() {
+	if (synthRoute->isRecordingAudio()) {
+		ui->audioRecord->setText("Record");
+		synthRoute->stopRecordingAudio();
+	} else {
+		static QString currentDir = NULL;
+		QString fileName = QFileDialog::getSaveFileName(this, NULL, currentDir, "*.wav *.raw;;*.wav;;*.raw;;*.*");
+		if (!fileName.isEmpty()) {
+			currentDir = QDir(fileName).absolutePath();
+			ui->audioRecord->setText("Stop");
+			synthRoute->startRecordingAudio(fileName);
+		}
 	}
 }
 
